fixes for alignment and svg

--- a/css/rulesheet.css
+++ b/css/rulesheet.css
@@ -3,8 +3,20 @@
 .page-wrapper {
   background-image: url("../images/gravel.jpg");
   border-radius: 30px;
-  width: 80%;
+  width: 85%;
   margin: 0 auto;
+}
+.page-wrapper div, .page-wrapper section {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 10px;
+}
+.page-wrapper h1 {
+  font-size: 2em;
+}
+.page-wrapper h1, .page-wrapper h2 {
+  font-family: "Lora", serif;
+  text-align: center;
 }
 
 body {
@@ -75,10 +87,14 @@ header {
 }
 
 .doghouse {
+  width: 80%;
   display: block;
   margin-left: auto;
   margin-right: auto;
   animation: slide 2s 1;
+}
+.doghouse img {
+  margin: 0 auto;
 }
 
 @keyframes slide {
@@ -129,6 +145,33 @@ header {
   40%, 100% {
     transform: rotateY(0);
   }
+}
+footer {
+  border-radius: 30px;
+  border-width: 2px;
+  border: #473328 solid;
+  background-color: #c3e0A8;
+  padding-top: 44%;
+  padding-bottom: -10%;
+  font-size: 14px;
+  text-align: center;
+  display: block;
+  background-image: url("../svgs/LilPaw.svg");
+  background-repeat: repeat;
+  height: 160px;
+  margin: 0 auto;
+  background-size: 400px 450px;
+}
+footer li {
+  flex-direction: column;
+}
+footer a {
+  margin-left: 20px;
+  display: block;
+  color: #c3e0A8;
+}
+footer a:hover {
+  color: #AB9260;
 }
 
 /*# sourceMappingURL=rulesheet.css.map */
