--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -41,8 +41,20 @@
 .page-wrapper{
   background-image: url("../images/gravel.jpg");
   border-radius: 30px;
-  width:80%;
+  width:85%;
   margin:0 auto;
+  div, section{
+    width:90%;
+    margin:0 auto;
+    margin-top:10px;
+  };
+  h1{
+    font-size: 2em;
+  }
+  h1,h2{
+    font-family: $headerFont;
+    text-align: center;
+  };
 }
 body{
   @include set-flex($direction:column, $wrap:wrap);
@@ -92,11 +104,13 @@ header{
 }
 
 .doghouse {
+  width:80%;
   display: block;
+  margin-left:auto;
   margin-right: auto;
   animation: slide 2s 1;
   img{
-    margin-left: 50%;
+    margin:0 auto;
   };
   }
 
@@ -135,4 +149,32 @@ header{
     30% { transform: rotateY(6deg);}
     35% { transform: rotateY(-4deg);}
     40%, 100% {  transform: rotateY(0);}
+}
+footer{
+  // object-fit: fill;
+  @include border(2px,solid);
+  background-color: $sageGreen;
+  padding-top:44%;
+  padding-bottom:-10%;
+  font-size: 14px;
+  text-align: center;
+  display:block;
+  background-image: url("../svgs/LilPaw.svg");
+  background-repeat: repeat;
+  // width:100%;
+  height:160px;
+  // height:340px;
+  margin:0 auto;
+  background-size: 400px 450px;
+  li{
+  flex-direction: column;
+  };
+  a{
+    margin-left: 20px;
+    display:block;
+    color:$sageGreen;
+  };
+  a:hover{
+    color:$bodyAltCol;
+  };
 }
